Fix CSS warning: Add standard line-clamp property

--- a/style.css
+++ b/style.css
@@ -643,6 +643,7 @@ aside {
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    line-clamp: 2;
     -webkit-box-orient: vertical;
 }
 
